<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubFilterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="2">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dip">

                    <ImageView

                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        
                        app:srcCompat="@android:drawable/btn_star" />
                    <TextView

                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="start"
                        android:padding="5dip"
                        android:text="@string/Keyword_Title"
                        android:textAlignment="textStart" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Keyword_Tips">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/titleKeyword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Switch
                            android:id="@+id/TitleRegSwitch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/UseRegex" />

                    </LinearLayout>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dip">

                    <ImageView

                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        
                        app:srcCompat="@android:drawable/btn_star" />
                    <TextView

                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="start"
                        android:padding="5dip"
                        android:text="@string/Keyword_Text"
                        android:textAlignment="textStart" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Keyword_Tips">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/textKeyWord"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Switch
                            android:id="@+id/TextRegSwitch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/UseRegex" />

                    </LinearLayout>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dip">

                    <ImageView

                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        
                        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
                    <TextView

                        android:layout_width="20dp"
                        android:layout_height="wrap_content"

                        android:gravity="start"
                        android:padding="5dip"
                        android:text="@string/Keyword_Title_not"
                        android:textAlignment="textStart" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Keyword_Tips">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/titleKeyword_not"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Switch
                            android:id="@+id/TitleRegSwitch_not"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/UseRegex" />

                    </LinearLayout>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dip">

                    <ImageView

                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        
                        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
                    <TextView

                        android:layout_width="20dp"
                        android:layout_height="wrap_content"

                        android:gravity="start"
                        android:padding="5dip"
                        android:text="@string/Keyword_Text_not"
                        android:textAlignment="textStart" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Keyword_Tips">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/textKeyWord_not"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Switch
                            android:id="@+id/TextRegSwitch_not"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/UseRegex" />

                    </LinearLayout>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dip">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="5"

                        android:gravity="start"
                        android:padding="5dip"
                        android:text="@string/Keyword_Text_Desc"
                        android:textAlignment="textStart" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dip">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="5"

                        android:gravity="start"
                        android:padding="5dip"
                        android:text="@string/Keyword_Text_Desc3"
                        android:textAlignment="textStart" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dip">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="5"

                        android:gravity="start"
                        android:padding="5dip"
                        android:text="@string/Keyword_Text_Desc2"
                        android:textAlignment="textStart" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>